Fixed code overflow

--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,8 @@ li.photo
         {background-image: url(/img/image.svg);}
 .callout, blockquote 
         { margin: 20px 0; padding: 15px 2em 15px 15px; border-left: 5px solid #eee;}
-iframe {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    padding-bottom: 15px;
-}
+iframe  {display: block; margin: 0 auto; width: 100%; padding-bottom: 15px;}
+pre {width: 100%; overflow-x: auto;}
 @media only screen and (max-width:598px) {
     body {margin: 1% auto 0;}
 }
